add js tasks, little fixes

--- a/html/index.html
+++ b/html/index.html
@@ -11,12 +11,12 @@
             <div class="section">
                 <div class="1_task">
                     <p>
-                        1. На садовом участке площадью 10 соток, разбили грядки 15 на 25 метров. Сколько м2 осталось незанято?<br> Решение:<br> 1) S(участка)= 10ar = 1000m2<br> 2) S(1грядки)= 15 * 25 = 375m2<br> 3) Количество грядок: 1000 : 375 = 2,7 = 2<br> 4) 2 грядки занимают 750m2<br> 5) 1000 - 750 = 250m2<br>Ответ: 250m2.
+                        1. На садовом участке площадью 10 соток, разбили грядки 15 на 25 метров. Сколько м2 осталось незанято?<br> Решение:<br> 1) S(участка)= 10ar = 1000m2<br> 2) S(1грядки)= 15 * 25 = 375m2<br> 3) Количество грядок: 1000 : 375 = 2,7 = 2<br> 4) 2 грядки занимают 750m2<br> 5) 1000 - 750 = 250m2<br>Ответ: 250m2. Решение в консоли
                     </p>
                 </div>
                 <div class="2_task">
                     <p>
-                        2. Найдите площадь овального кольца, полученного из овала площадью 15 дм2 вырезанием овала площадью 600 см2.<br> Решение:<br> 1) S(м.овала)= 600 см2 = 6 дм2<br> 2) S(кольца) = S(б.овала) - S(м.овала) = 15 - 6 = 9 дм2<br> Ответ: 9 дм2
+                        2. Найдите площадь овального кольца, полученного из овала площадью 15 дм2 вырезанием овала площадью 600 см2.<br> Решение:<br> 1) S(м.овала)= 600 см2 = 6 дм2<br> 2) S(кольца) = S(б.овала) - S(м.овала) = 15 - 6 = 9 дм2<br> Ответ: 9 дм2. Решение в консоли
                     </p>
                 </div>
                 <div class="3_task">
